fix overflow and increase display height

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
 
 .calculator-display {
 
-    height: 60px;
+    height: 65px;
     /* width: 325px; */
     width: 250px;
     margin: 5px;
@@ -36,6 +36,7 @@ header {
     border: 3px solid black;
     text-align: right;
     background-color:  #06B515;
+    overflow: auto;
 }
 
 .buttons-section {
